--- a/deploy/Dockerfile.Phobos
+++ b/deploy/Dockerfile.Phobos
@@ -10,6 +10,7 @@ RUN dotnet restore "Phobos.Core/Phobos.Core.csproj" --runtime linux-musl-x64
 RUN dotnet restore "Phobos.Client/Phobos.Client.csproj" --runtime linux-musl-x64
 
 RUN dotnet workload restore "Phobos.Client/Phobos.Client.csproj"
+RUN dotnet workload install wasm-tools
 
 COPY . .
 RUN dotnet publish "Phobos.Web/Phobos.Web.csproj"  \
