--- a/deploy/Dockerfile.Phobos
+++ b/deploy/Dockerfile.Phobos
@@ -1,6 +1,8 @@
 ﻿FROM mcr.microsoft.com/dotnet/sdk:8.0 AS publish
 WORKDIR /src
 
+RUN apt update && apt install python3 python3-pip -y
+
 COPY ["Phobos.Web/Phobos.Web.csproj", "Phobos.Web/"]
 COPY ["Phobos.Core/Phobos.Core.csproj", "Phobos.Core/"]
 COPY ["Phobos.Client/Phobos.Client.csproj", "Phobos.Client/"]
